--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="imgBox">
           <h4> &nbsp;</h4>
           <h4> &nbsp;</h4>
-           <h4>Ada Byron</h4>
-            <h4>Kemény János</h4>
-            <h3>A készítőkről</h3>
+           <h4 id="ada" onclick="transform(); ada()">Ada Byron</h4>
+            <h4 id="kemeny" onclick="transform(); kemeny()">Kemény János</h4>
+            <h3 id="keszitok" onclick="transform(); keszitok()">A készítőkről</h3>
         </div>
         <div class="details">
           <div class="text">
@@ -31,4 +31,6 @@
       </div>
     </div>
 </body>
+
+<script src="main.js"></script>
 </html>
