--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <h4> &nbsp;</h4>
            <h4 href="#ada" onclick= "ada()">Ada Byron</h4>
             <h4 href="#kemeny" onclick="kemeny()">Kemény János</h4>
+            <h3 href="#basic" onclick="basic()">BASIC</h3>
             <h3 href="#keszitok" onclick="keszitok()">A készítőkről</h3>
         </div>
         <div id="kemeny" class="details">
-          <div>
           <div class="text">
             <h2>Kemény János György</h2>
             <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
@@ -27,8 +27,51 @@
             <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
             <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
             <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
+            onclick="ada()">
+            Ada</button>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 60%;"
+            onclick="keszitok()">
+            Készítőkről</button>
           </div>
         </div>
+        <div id="basic" class="details">
+          <div class="text">
+            <h2>BASIC</h2>
+            <p>Kemeny úgy látta, a programozás legfőbb problémája, hogy nem demokratikus, inkább kirekesztő, és nem érthető, hanem feleslegesen sokat követel. Pedig ő tanárként, igazgatóként és rektorként is ebben látta a tudomány jövőjét: a megfelelő oktatásban, az információk minél közérthetőbb átadásában.</p>
+            <p>A BASIC nyelvet azért találtam ki, mert úgy éreztem, hogy a számítógépet hozzáférhetővé kell tenni minden egyetemi hallgató számára.</p>
+            <P>A BASIC nyelv fő kritériumait nyolc pontban fektették le; ezekből kiderül, hogy tulajdonképpen az addig összegyűlt hibák és akadályok kiküszöbölése volt az elsődleges szempont a tervezésnél.</P>
+            <ol>
+              <li>Általános célú felhasználásra is alkalmas</li>
+              <li>Könnyen megtanulható és használható</li>
+              <li>Bővíthető</li>
+              <li>Interaktív</li>
+              <li>Világos, érthető hibaüzenetek</li>
+              <li>Hatékony</li>
+              <li>Hardverfüggetlen</li>
+              <li>Oprendszer-független</li>
+            </ol>
+            <p>Az alapvető BASIC parancsok:</p>
+            <ul>
+              <li>HELLO — bejelentkezés a DTSS-be</li>
+              <li>BYE — kijelentkezés a DTSS-ből</li>
+              <li>BASIC — a BASIC mód elindítása</li>
+              <li>NEW — új program elnevezése, programírás megkezdése</li>
+              <li>OLD — egy korábban elnevezett program visszaállítása a háttértárból</li>
+              <li>LIST — az aktuális program megjelenítése</li>
+              <li>SAVE — a futó program mentése háttértárra</li>
+              <li>UNSAVE — a futó program törlése a háttértárról</li>
+              <li>CATALOG — az elérhető programok listájának megjelenítése</li>
+              <li>SCRATCH — a futó program törlése, de a név megtartásával</li>
+              <li>RENAME — a program átnevezése, törlés nélkül</li>
+              <li>RUN — az akutális program futtatása</li>
+              <li>STOP — a futó program leállítása</li>
+              <li>FRI — Friden-mód bekapcsolása (így elektromechanikus írógépet is lehetett adatbevitelre használni)</li>
+              <li>NFR — a Friden-mód kikapcsolása</li>
+              <li>EXP — a segítség (help) menü elérése, ezzel lehetett lekérni a parancsokat</li>
+              <li>REPLACE — más néven menti el az éppen futó programot</li>
+            </ul>
+          </div>
         </div>
         <div id="ada" class="details">
           <div class="text">
@@ -41,6 +84,9 @@
             <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
             <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
             <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 80%;float: left;"
+            onclick="kemeny()">
+            Kemeny</button>
           </div>
         </div>
         <div id="keszitok" class="details">
@@ -53,6 +99,9 @@
             <p>melles vontágon zönzbertől való himnálvász. Janás: a bilás és a zatlagos.</p>
             <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
             <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
+            onclick="kemeny()">
+            Kemeny</button>
           </div>
         </div>
       </div>
