--- a/index.html
+++ b/index.html
@@ -1,76 +1,43 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="hu">
 <head>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="js/turn.js"></script>
-<style type="text/css">
-
-#book{
-	width:80vh;
-	height:50vh;
-}
-
-#book .turn-page{
-	background-color:white;
-}
-
-#book .cover{
-	background:#333;
-}
-
-#book .cover h1{
-	color:white;
-	text-align:center;
-	font-size:50px;
-	line-height:500px;
-	margin:0px;
-}
-
-#book .loader{
-	background-image:url(loader.gif);
-	width:24px;
-	height:24px;
-	display:block;
-	position:absolute;
-	top:238px;
-	left:188px;
-}
-
-#book .data{
-	text-align:center;
-	font-size:40px;
-	color:#999;
-	line-height:500px;
-}
-
-#controls{
-	width:800px;
-	text-align:center;
-	margin:20px 0px;
-	font:30px arial;
-}
-
-#controls input, #controls label{
-	font:30px arial;
-}
-
-</style>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ada Byron és Kemény János</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div id="book">
-	<div class="cover"><h1>Cím</h1></div>
-  <div class="turn-page-wrapper"><h2>Kemény János György</h2>
-    <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4><p>Kemény apja, aki kereskedő és bankár volt, megsejtette, hogy Hitler mekkora veszélyt jelent, így az USA-ba ment, hogy megalapozza a család jövőjét. A család 1940-ben, a   második zsidótörvények bevezetése után követték. Kemény három év alatt kitűnő eredménnyel végezte el a középiskolát, majd a Princetonra ment.</p><p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p><p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
-  </div>
-  <div class="turn-page-wrapper">
-    <p>27 évesen meghívták a Dartmouthi Főiskolára matematikaprofesszornak. Két év múlva a Matematikai Intézet vezetője lett. 1962-ben ő javasolta az egyetemi számítógépközpont  megépítését is.</p>
-    <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
-    <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
-    <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p></div>
-<div class="turn-page-wrapper">
-  <h2>BASIC</h2>
+    <div class="card">
+        <div class="imgBox">
+          <h4> &nbsp;</h4>
+          <h4> &nbsp;</h4>
+           <h4 href="#ada" onclick= "ada()">Ada Byron</h4>
+            <h4 href="#kemeny" onclick="kemeny()">Kemény János</h4>
+            <h3 href="#basic" onclick="basic()">BASIC</h3>
+            <h3 href="#keszitok" onclick="keszitok()">A készítőkről</h3>
+        </div>
+        <div id="kemeny" class="details">
+          <div class="text">
+            <h2>Kemény János György</h2>
+            <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
+            <p>Kemény apja, aki kereskedő és bankár volt, megsejtette, hogy Hitler mekkora veszélyt jelent, így az USA-ba ment, hogy megalapozza a család jövőjét. A család 1940-ben, a   második zsidótörvények bevezetése után követték. Kemény három év alatt kitűnő eredménnyel végezte el a középiskolát, majd a Princetonra ment.</p>
+            <p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p>
+            <p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
+            <p>27 évesen meghívták a Dartmouthi Főiskolára matematikaprofesszornak. Két év múlva a Matematikai Intézet vezetője lett. 1962-ben ő javasolta az egyetemi számítógépközpont  megépítését is.</p>
+            <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
+            <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
+            <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
+            onclick="ada()">
+            Ada</button>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 60%;"
+            onclick="keszitok()">
+            Készítőkről</button>
+          </div>
+        </div>
+        <div id="basic" class="details">
+          <div class="text">
+            <h2>BASIC</h2>
             <p>Kemeny úgy látta, a programozás legfőbb problémája, hogy nem demokratikus, inkább kirekesztő, és nem érthető, hanem feleslegesen sokat követel. Pedig ő tanárként, igazgatóként és rektorként is ebben látta a tudomány jövőjét: a megfelelő oktatásban, az információk minél közérthetőbb átadásában.</p>
             <p>A BASIC nyelvet azért találtam ki, mert úgy éreztem, hogy a számítógépet hozzáférhetővé kell tenni minden egyetemi hallgató számára.</p>
             <P>A BASIC nyelv fő kritériumait nyolc pontban fektették le; ezekből kiderül, hogy tulajdonképpen az addig összegyűlt hibák és akadályok kiküszöbölése volt az elsődleges szempont a tervezésnél.</P>
@@ -84,102 +51,62 @@
               <li>Hardverfüggetlen</li>
               <li>Oprendszer-független</li>
             </ol>
-</div>
-<div class="turn-page-wrapper"></div>
-<div class="turn-page-wrapper"><p>Az alapvető BASIC parancsok:</p>
-  <ul>
-    <li>HELLO — bejelentkezés a DTSS-be</li>
-    <li>BYE — kijelentkezés a DTSS-ből</li>
-    <li>BASIC — a BASIC mód elindítása</li>
-    <li>NEW — új program elnevezése, programírás megkezdése</li>
-    <li>OLD — egy korábban elnevezett program visszaállítása a háttértárból</li>
-    <li>LIST — az aktuális program megjelenítése</li>
-    <li>SAVE — a futó program mentése háttértárra</li>
-    <li>UNSAVE — a futó program törlése a háttértárról</li>
-    <li>CATALOG — az elérhető programok listájának megjelenítése</li>
-    <li>SCRATCH — a futó program törlése, de a név megtartásával</li>
-  </div>
-    <div class="turn-page-wrapper">
-    <li>RENAME — a program átnevezése, törlés nélkül</li>
-    <li>RUN — az akutális program futtatása</li>
-    <li>STOP — a futó program leállítása</li>
-    <li>FRI — Friden-mód bekapcsolása (így elektromechanikus írógépet is lehetett adatbevitelre használni)</li>
-    <li>NFR — a Friden-mód kikapcsolása</li>
-    <li>EXP — a segítség (help) menü elérése, ezzel lehetett lekérni a parancsokat</li>
-    <li>REPLACE — más néven menti el az éppen futó programot</li>
-  </ul>
-</div></div>
-<div id="controls">
-	<label for="page-number">Page:</label> <input type="text" size="3" id="page-number"> of <span id="number-pages"></span>
-</div>
-
-<script type="text/javascript">
-
-	// Sample using dynamic pages with turn.js
-
-	var numberOfPages = 1000; 
-
-
-	// Adds the pages that the book will need
-	function addPage(page, book) {
-		// 	First check if the page is already in the book
-		if (!book.turn('hasPage', page)) {
-			// Create an element for this page
-			var element = $('<div />', {'class': 'page '+((page%2==0) ? 'odd' : 'even'), 'id': 'page-'+page}).html('<i class="loader"></i>');
-			// If not then add the page
-			book.turn('addPage', element, page);
-			// Let's assum that the data is comming from the server and the request takes 1s.
-			setTimeout(function(){
-					element.html('<div class="data">Data for page '+page+'</div>');
-			}, 1000);
-		}
-	}
-
-	$(window).ready(function(){
-		$('#book').turn({acceleration: true,
-							pages: numberOfPages,
-							elevation: 50,
-							gradients: !$.isTouch,
-							when: {
-								turning: function(e, page, view) {
-
-									// Gets the range of pages that the book needs right now
-									var range = $(this).turn('range', page);
-
-									// Check if each page is within the book
-									for (page = range[0]; page<=range[1]; page++) 
-										addPage(page, $(this));
-
-								},
-
-								turned: function(e, page) {
-									$('#page-number').val(page);
-								}
-							}
-						});
-
-		$('#number-pages').html(numberOfPages);
-
-		$('#page-number').keydown(function(e){
-
-			if (e.keyCode==13)
-				$('#book').turn('page', $('#page-number').val());
-				
-		});
-	});
-
-	$(window).bind('keydown', function(e){
-
-		if (e.target && e.target.tagName.toLowerCase()!='input')
-			if (e.keyCode==37)
-				$('#book').turn('previous');
-			else if (e.keyCode==39)
-				$('#book').turn('next');
-
-	});
-
-</script>
-
-
+            <p>Az alapvető BASIC parancsok:</p>
+            <ul>
+              <li>HELLO — bejelentkezés a DTSS-be</li>
+              <li>BYE — kijelentkezés a DTSS-ből</li>
+              <li>BASIC — a BASIC mód elindítása</li>
+              <li>NEW — új program elnevezése, programírás megkezdése</li>
+              <li>OLD — egy korábban elnevezett program visszaállítása a háttértárból</li>
+              <li>LIST — az aktuális program megjelenítése</li>
+              <li>SAVE — a futó program mentése háttértárra</li>
+              <li>UNSAVE — a futó program törlése a háttértárról</li>
+              <li>CATALOG — az elérhető programok listájának megjelenítése</li>
+              <li>SCRATCH — a futó program törlése, de a név megtartásával</li>
+              <li>RENAME — a program átnevezése, törlés nélkül</li>
+              <li>RUN — az akutális program futtatása</li>
+              <li>STOP — a futó program leállítása</li>
+              <li>FRI — Friden-mód bekapcsolása (így elektromechanikus írógépet is lehetett adatbevitelre használni)</li>
+              <li>NFR — a Friden-mód kikapcsolása</li>
+              <li>EXP — a segítség (help) menü elérése, ezzel lehetett lekérni a parancsokat</li>
+              <li>REPLACE — más néven menti el az éppen futó programot</li>
+            </ul>
+          </div>
+        </div>
+        <div id="ada" class="details">
+          <div class="text">
+            <h2>Ada Byron</h2>
+            <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
+            <p>Kemény apja, aki kereskedő és bankár volt, megsejtette, hogy Hitler mekkora veszélyt jelent, így az USA-ba ment, hogy megalapozza a család jövőjét. A család 1940-ben, a   második zsidótörvények bevezetése után követték. Kemény három év alatt kitűnő eredménnyel végezte el a középiskolát, majd a Princetonra ment.</p>
+            <p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p>
+            <p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
+            <p>27 évesen meghívták a Dartmouthi Főiskolára matematikaprofesszornak. Két év múlva a Matematikai Intézet vezetője lett. 1962-ben ő javasolta az egyetemi számítógépközpont  megépítését is.</p>
+            <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
+            <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
+            <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 80%;float: left;"
+            onclick="kemeny()">
+            Kemeny</button>
+          </div>
+        </div>
+        <div id="keszitok" class="details">
+          <div class="text">
+            <h2>A készítőkről</h2>
+            <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
+            <p>Lórum ipse az egyik fogos higgadt fengenység. Talan ület, amustól, orontól,</p>
+            <p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p>
+            <p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
+            <p>melles vontágon zönzbertől való himnálvász. Janás: a bilás és a zatlagos.</p>
+            <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
+            <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
+            onclick="kemeny()">
+            Kemeny</button>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
+
+<script src="main.js"></script>
 </html>
