--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
            <h4 href="#ada" onclick= "ada()">Ada Byron</h4>
             <h4 href="#kemeny" onclick="kemeny()">Kemény János</h4>
             <h3 href="#basic" onclick="basic()">BASIC</h3>
-            <h3 href="#keszitok" onclick="keszitok()">A készítőkről</h3>
         </div>
         <div id="kemeny" class="details">
           <div class="text">
@@ -29,16 +28,15 @@
             <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
             <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
             onclick="ada()">
-            Ada</button>
-            <button style="background:white;color:rgb(22, 22, 22);margin-left: 60%;"
-            onclick="keszitok()">
-            Készítőkről</button>
+            Ada L.</button>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 60%;" onclick="basic()">
+            A BASIC</button>
           </div>
         </div>
         <div id="basic" class="details">
           <div class="text">
             <h2>BASIC</h2>
-            <p>Kemeny úgy látta, a programozás legfőbb problémája, hogy nem demokratikus, inkább kirekesztő, és nem érthető, hanem feleslegesen sokat követel. Pedig ő tanárként, igazgatóként és rektorként is ebben látta a tudomány jövőjét: a megfelelő oktatásban, az információk minél közérthetőbb átadásában.</p>
+            <p>Kemény úgy látta, a programozás legfőbb problémája, hogy nem demokratikus, inkább kirekesztő, és nem érthető, hanem feleslegesen sokat követel. Pedig ő tanárként, igazgatóként és rektorként is ebben látta a tudomány jövőjét: a megfelelő oktatásban, az információk minél közérthetőbb átadásában.</p>
             <p>A BASIC nyelvet azért találtam ki, mert úgy éreztem, hogy a számítógépet hozzáférhetővé kell tenni minden egyetemi hallgató számára.</p>
             <P>A BASIC nyelv fő kritériumait nyolc pontban fektették le; ezekből kiderül, hogy tulajdonképpen az addig összegyűlt hibák és akadályok kiküszöbölése volt az elsődleges szempont a tervezésnél.</P>
             <ol>
@@ -71,42 +69,31 @@
               <li>EXP — a segítség (help) menü elérése, ezzel lehetett lekérni a parancsokat</li>
               <li>REPLACE — más néven menti el az éppen futó programot</li>
             </ul>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 4%;float: left;"
+            onclick="kemeny()">
+            Kemény</button>
+            <button style="background:white;color:rgb(22, 22, 22);margin-left: 20%;float: right;"
+            onclick="ada()">
+            Ada L.</button>
           </div>
         </div>
         <div id="ada" class="details">
           <div class="text">
             <h2>Ada Byron</h2>
-            <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
-            <p>Kemény apja, aki kereskedő és bankár volt, megsejtette, hogy Hitler mekkora veszélyt jelent, így az USA-ba ment, hogy megalapozza a család jövőjét. A család 1940-ben, a   második zsidótörvények bevezetése után követték. Kemény három év alatt kitűnő eredménnyel végezte el a középiskolát, majd a Princetonra ment.</p>
-            <p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p>
-            <p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
-            <p>27 évesen meghívták a Dartmouthi Főiskolára matematikaprofesszornak. Két év múlva a Matematikai Intézet vezetője lett. 1962-ben ő javasolta az egyetemi számítógépközpont  megépítését is.</p>
-            <p>1963-ban elkészült a Thomas Kurtz-cal közösen kidolgozott, első időosztásos számítógépes rendszer, amely megnövelte a processzorok kihasználtságát, ezzel a  rendszerteljesítményét is. Ezért a vívmányáért 1990-ben megkapta az IBM első Louis Robinson-díját.</p>
-            <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
-            <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
+            <h4>Született 1815. december 10. London<br>Elhunyt	1852. november 27. (36 évesen), London</h4>
+            <p>Ada Lovelace, eredeti nevén Ada Byron, Lord Byron lánya. Szülei elváltak, az anyja vette magához, aki a tudományos tanulmányait szorgalmazta.</p>
+            <p>Munkásságát tudományos költészetnek nevezte. Hamar híressé vált a viktoriánus korszak tudományos közegében, és olyan kiváló személyiségekkel tartott kapcsolatot, mint Michael Faraday és Charles Dickens.</p>
+            <p>Ada Lovelace egyik legkiemelkedőbb hozzájárulása a számítástudományhoz Charles Babbage munkájához kapcsolódik. Babbage az 1820-as években előállt az első gépterveivel, amelyek a számítások automatizálását célozták meg. Elsőként táblázatok generálására tervezett gépeket képzelt el, majd áttért egy általánosabb és modern számítógépmodellre.</p>
+            <p>Ezt az új modellt az "Elemzőgép" vagy Analytical Engine néven ismerte el, és ezt lehetne nevezni az első modern számítógépek ősanyjának.</p>
+            <p>Az Analytical Engine alkalmas volt ciklusok és kondicionális elágazások kezelésére, és saját beépített memóriával rendelkezett. Babbage eredeti tervei pénzügyi nehézségek miatt sosem valósultak meg teljes egészében, de Ada Lovelace programok írásával foglalkozott vele.</p>
+            <p>Az általa írt program, amelyet a Bernoulli-számok generálására tervezett, gyakran az informatika történetének első számítógépes programjaként szerepel, és az informatikatörténet egyik meghatározó mérföldkövét jelenti.</p>
+            <p>Az Analytical Engine hiánya ellenére Ada Lovelace jegyzeteiben olyan témákat is érintett, mint az ember és a technológia viszonya, valamint a számítógépek potenciális szerepe az egyének és a társadalom életében.</p>
+            <p> Ada Lovelace élete és munkássága az informatika történetének fontos részét képezi, és a modern számítástechnika egyik alapját jelenti, a tudomány és művészet kreatív egyesítésével.</p>
             <button style="background:white;color:rgb(22, 22, 22);margin-left: 80%;float: left;"
             onclick="kemeny()">
-            Kemeny</button>
+            Kemény</button>
           </div>
         </div>
-        <div id="keszitok" class="details">
-          <div class="text">
-            <h2>A készítőkről</h2>
-            <h4>Született 1926. május 31. Budapest<br>Elhunyt	1992. december 26. (66 évesen) New Hampshire, USA</h4>
-            <p>Lórum ipse az egyik fogos higgadt fengenység. Talan ület, amustól, orontól,</p>
-            <p>A második világháború alatt, 19 éves korában behívták katonának. Szolgálati idejét, a Los Alamos National Laboratoryben – töltötte, itt folyt a híres Manhattan-terv, az   atombomba elkészítése. Felettese Richard Feynmann volt, de együtt dolgozhatott más híres magyar tudósokkal, például Neumann Jánossal is.</p>
-            <p>1947-ben lediplomázott, a Ph.D. fokozatot két évvel később szerezte meg. Előtte azonban Robert Oppenheimer, az atombomba atyja kinevezte tanársegédnek Albert Einstein   mellé. Együtt kutatták az egyesített térelméletet.</p>
-            <p>melles vontágon zönzbertől való himnálvász. Janás: a bilás és a zatlagos.</p>
-            <p>Szintén Kemény és Thomas Kurtz közös munkájának eredménye a BASIC (Beginner's All Purpose Symbolic Instruction Code) programozási nyelv kifejlesztése, ami a 80-as   években több számítógép „beépített” nyelvévé vált.</p>
-            <p>Kemény egyébként a mai elektronikus levelezés (e-mail) úttörője volt. Felesége egy 200 km távolságban levő főiskolán dolgozott. A két főiskola központi gépének  összekapcsolásával létrejött az első „internet” amelyen keresztül levelezhettek.</p>
-            <button style="background:white;color:rgb(22, 22, 22);margin-left: 5%;float: left;"
-            onclick="kemeny()">
-            Kemeny</button>
-          </div>
-        </div>
-      </div>
-    </div>
-</body>
-
+      
 <script src="main.js"></script>
 </html>
