akarom mondani minden jó

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Ada L.</button>
           </div>
         </div>
-        <div id="ada" class="details">
+        <div id="ada" class="details" ‎ > 
           <div class="text">
             <h2>Ada Byron</h2>
             <h4>Született 1815. december 10. London<br>Elhunyt	1852. november 27. (36 évesen), London</h4>
