--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Kemény</button>
             <button style="background:white;color:rgb(22, 22, 22);margin-left: 20%;float: right;"
             onclick="ada()">
-            Ada L.</button>
+            Ada</button>
           </div>
         </div>
         <div id="ada" class="details" ‎ > 
